# mntr

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
demo/: pipe_publisher.sh  publisher_program.py  run_publishers.sh  run_server.sh
demo/examples/: config.yaml  example_publishers.py
demo/passphrases/: server.yaml
demo/store/: channel-build1-base-progress.pkl
doc/: publisher-api.md
mntr/: types.py
mntr/publisher/: client.py  interval_publisher.py  pipe.py
mntr/publisher/data/: __init__.py
mntr/publisher/data/impl/: __init__.py  chartjs.py  html.py  image.py  matplotlib.py  multi.py  plaintext.py  table.py
mntr/server/: __main__.py  server.py  state.py
mntr/server/test/: test_server.py  test_state.py
mntr/util/: encryption.py
mntr/util/test/: test_encryption.py
mntr/web/: asset-manifest.json  index.html
mntr/web/static/css/: main.ca633e68.css  main.ca633e68.css.map
mntr/web/static/js/: main.0980f1ab.js  main.10c6027f.js  main.1786d6be.js  main.60602cce.js  main.75f681b6.js  main.76e9a0fb.js  main.7d0ddd14.js  main.94f86ec8.js  main.ba774575.js  main.bc1a81a9.js  main.ca61c526.js  main.cecb6871.js  main.d9f36141.js  main.da4a089d.js  main.e03ad876.js  main.e6d93076.js  main.e6d93076.js.LICENSE.txt  main.e7cb5202.js  main.e8014592.js  main.eb0f0726.js  main.f3b89fa7.js  main.f3b89fa7.js.LICENSE.txt  main.f9115ae6.js
react_src/: package-lock.json  package.json
react_src/public/: index.html
react_src/src/: App.js  styles.css  theme.js
react_src/src/components/: Login.js  Main.js  Panel.js  PanelGrid.js
react_src/src/components/appbar/: AddPanel.js  AdminDialog.js  AppBar.js  AppBarButton.js  ChannelDialog.js  ServerStatus.js  SideMenu.js  Windows.js
react_src/src/components/display/: ChartJSDisplay.js  Display.js  ErrorDisplay.js  HtmlDisplay.js  ImageDisplay.js  MultiDisplay.js  PlaintextDisplay.js  TableDisplay.js
react_src/src/state/: credentialStorage.js  credentialsSlice.js  mobileSlice.js  panelSlice.js  store.js  themeSlice.js
react_src/src/util/: connection.js  encryption.js
